hphp/test/slow/xhp/attr-syntax-3.php.expectf

Fatal error: Using ->: syntax in write context is not supported in %s on line 8
